--- a/docs/css/hl.css
+++ b/docs/css/hl.css
@@ -324,7 +324,7 @@ body {
     font-size: 17px;
     line-height: 1.428571429;
     color: #333333;
-    background-color: #fff
+    background-color: #1e1e1c
 }
 
 input,
